[package]
name = "echse"
version = "0.1.0"
edition = "2024"

[dependencies.rtic]
git = "https://github.com/rtic-rs/rtic.git"
features = ["thumbv6-backend"]

[dependencies.rtic-monotonics]
git = "https://github.com/rtic-rs/rtic.git"
features = ["rp2040"]

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4.0"
embassy-sync = "0.6.1"
fugit = "0.3.6"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
pio = "0.2.0"
pio-proc = "0.2.0"
portable-atomic = { version = "1.7.0", features = ["critical-section"] }
rp2040-boot2 = "0.3.0"
rp2040-hal = "0.11.0"

cortex-m = "0.7"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
rp-pico = "0.9.0"
heapless = { version = "0.8.0", features = ["portable-atomic"] }

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimzations
